# rose-trees

./: README.md  package.yaml  profile.html  rose-trees.cabal
bench/: Bench.hs
bench/Data/: Build.hs  TreeBench.hs
bench/Data/Tree/: HashBench.hs  KnuthBench.hs  SetBench.hs
src/Data/Tree/: Hash.hs  HashSet.hs  Knuth.hs  Rose.hs  Set.hs
src/Data/Tree/Knuth/: Forest.hs
src/Data/Tree/Rose/: Internal.hs
test/: Spec.hs
test/Data/Tree/: RoseSpec.hs
