Name:                   rose-trees
Version:                0.0.2
Author:                 Athan Clark <athan.clark@gmail.com>
Maintainer:             Athan Clark <athan.clark@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               A collection of rose tree structures.
-- Description:
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Data.Tree.Rose
                        Data.Tree.Knuth
                        Data.Tree.Knuth.Forest
                        Data.Tree.Set
  Build-Depends:        base >= 4.6 && < 5
                      , containers
                      , semigroups
                      , witherable
                      , sets

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , QuickCheck
                      , quickcheck-instances

Benchmark bench
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , bench
  Ghc-Options:          -Wall
  Main-Is:              Bench.hs
  Build-Depends:        base
                      , rose-trees

Source-Repository head
  Type:                 git
  Location:             https://github.com/athanclark/rose-trees.git
